feat(starter): connect to Ethereum

--- a/starter/index.html
+++ b/starter/index.html
@@ -8,6 +8,34 @@
   <body>
     <script type="module">
       import { ethers } from "https://cdnjs.cloudflare.com/ajax/libs/ethers/6.13.5/ethers.min.js";
+
+      let provider;
+      let signer = null;
+
+      if (window.ethereum == null) {
+
+        // If MetaMask is not installed, we use the default provider,
+        // which is backed by a variety of third-party services (such
+        // as INFURA). They do not have private keys installed,
+        // so they only have read-only access
+        console.log("MetaMask not installed; using read-only defaults")
+        provider = ethers.getDefaultProvider()
+      } else {
+
+        // Connect to the MetaMask EIP-1193 object. This is a standard
+        // protocol that allows Ethers access to make all read-only
+        // requests through MetaMask.
+        provider = new ethers.BrowserProvider(window.ethereum)
+
+        // If no `%%url%%` is provided, it connects to the default
+        // http://localhost:8545, which most nodes use.
+        // provider = new ethers.JsonRpcProvider(url)
+
+        // It also provides an opportunity to request access to write
+        // operations, which will be performed by the private key
+        // that MetaMask manages for the user.
+        signer = await provider.getSigner();
+      }
     </script>
   </body>
 </html>
